@@ -135,6 +135,13 @@ UTILITIES
     	R_PDFVIEWER is set (as it will normally be on a Unix-alike but
     	not on Windows, where the file association is used by default).
 
+    o	R CMD check checks for possibly check directories in the
+    	sources -- in mid-2008 there were about 20 examples on CRAN.
+
+    o	R CMD check checks for binary executable files (which should not
+	appear in a source package), using GNU file if available, else
+	by name.
+
 
 BUG FIXES
 
